# act-locally

./: Cargo.toml  README.md
src/: action_dispatcher.rs  actor.rs  builder.rs  dispatcher.rs  handler.rs  lib.rs  message.rs  types.rs
src/snapshots/: act_locally__actor__tests__async_handlers_execution_order.snap  act_locally__actor__tests__comprehensive_handler_execution_order.snap  act_locally__actor__tests__sync_handlers_execution_order.snap  act_locally__actor__tests__yielding_handlers.snap
