[package]
name = "act-locally"
version = "0.1.1"
edition = "2021"
authors = ["Micah Fitch <micahscopes@gmail.com>"]
license = "MIT OR Apache-2.0"
description = "Simple single-threaded async actors with ordinary functions as handlers and plainly typed messages"
repository = "https://github.com/micahscopes/act-locally"
keywords = ["actor", "asynchronous", "thread-local"]
categories = ["asynchronous"]

[dependencies]
futures = "0.3.30"
tracing = "0.1.40"
smol = "2.0.2"

[dev-dependencies]
insta = "1.41.1"
